# prjunnamed

./: .gitignore  404.html  Cargo.toml  IR.md  README.md  deny.toml  elab.md  example.ir  index.html  intro.html  print.html  searcher-c2a407aa.js  searchindex-26ee8b8f.js  searchindex-b1cd673f.js  searchindex.js  toc-882fd1c8.js  toc.html  toc.js
.github/workflows/: ci.yml
api/: crates.js  help.html  search-index.js  settings.html  src-files.js
api/prjunnamed_generic/: all.html  fn.canonicalize.html  fn.chain_rebalance.html  fn.decision.html  fn.iobuf_insert.html  fn.lower_arith.html  fn.tree_rebalance.html  fn.unname.html  index.html  sidebar-items.js  struct.LevelAnalysis.html  struct.LowerEq.html  struct.LowerLt.html  struct.LowerMul.html  struct.LowerMux.html  struct.LowerShift.html  struct.Normalize.html  struct.SimpleAigOpt.html
api/prjunnamed_graphviz/: all.html  fn.describe.html  index.html  sidebar-items.js
api/prjunnamed_lut/: all.html  index.html  struct.Lut.html
api/prjunnamed_memory/: all.html  index.html  struct.MemorySwizzle.html  trait.MemoryExt.html
api/prjunnamed_netlist/: all.html  enum.Cell.html  enum.Trit.html  (+50 more)
cli/: Cargo.toml  build.rs
dev/: build.html  langref.html
docs/: book.toml
generic/: Cargo.toml
graphviz/: Cargo.toml
ir/: Cargo.toml
ir/src/: lib.rs  model.rs  text.pest  text_emit.rs  text_parse.rs  util.rs  validate.rs
ir/src/model/: annotations.rs  bits.rs  cells.rs  float.rs
lut/: Cargo.toml
memory/: Cargo.toml
netlist/: Cargo.toml
pattern/: Cargo.toml
siliconblue/: Cargo.toml
yosys_json/: Cargo.toml
(+324 files in other folders)
